<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewYourTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_turn_title"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/textViewTurnNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_number_placeholder"
        android:textSize="96sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textViewYourTurn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/textViewInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_label"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTurnNumber"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/textViewInfoContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_content_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/textViewInfoLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/textViewTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTimeValue"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textViewTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_value_placeholder"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="100dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>